# airbnb-backend

./: .gitignore  README.md  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/tests/: test_bookings_model.py
categories/: admin.py  models.py  urls.py  views.py
categories/tests/: test_category_model.py
common/: exceptions.py  shorcut.py  shortcut.py  url_match.py  utils.py
config/: authentication.py  settings.py  snippets.py  urls.py
config/permissions/: decorators.py
direct_messages/: admin.py  models.py
direct_messages/tests/: test_direct_messages.py
experiences/: admin.py  models.py  urls.py  views.py
experiences/tests/: test_experiences_model.py  test_perks_api.py
houses/: admin.py  models.py
houses/tests/: test_models.py
medias/: models.py  serializers.py  url_match.py  urls.py  views.py
medias/tests/: test_medias_model.py
reviews/: admin.py  models.py  serializers.py
reviews/tests/: test_reviews_models.py
rooms/: admin.py  models.py  serializers.py  url_match.py  urls.py  views.py
rooms/tests/: roomModelTest.py  test_amenity_api.py  test_amenity_model.py  test_room_api.py  test_room_api_with_booking.py  test_room_api_with_property.py  test_room_model.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/tests/: test_user_api.py  test_user_authorization.py  test_user_model.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/tests/: test_wishlist_api.py  test_wishlist_api_with_some_action.py  test_wishlist_model.py
